# telnet-gateway-menu

./: .gitignore  .versio.yaml  Cargo.toml  README.md  addresses.toml-example  index.js  package.json
.github/workflows/: build.yml  release.yml  tests.yml
src/: addressbook.rs  main.rs  subcommand_serve.rs
