[package]
name = "telnet-gateway-menu"
version = "0.1.0"
description = "A simple address book service for telnet hosts"
authors = ["Les Orchard <me@lmorchard.com>"]
edition = "2018"
repository = "https://github.com/lmorchard/telnet-gateway-menu/"
license = "CC0-1.0"
categories = [ "command-line-interface", "command-line-utilities" ]
keywords = [ "telnet", "bbs" ]

[dependencies]
config = "0.11"
env_logger = "0.8"
lazy_static = "1.4.0"
libtelnet-rs = "1.1"
log = "0.4"
serde = { version = "1.0.125", features = ["derive"] }
toml = "0.5"
clap = "3.0.0-beta.2"
